Issue #1541158: Responsive layout broken with two sidebars

--- a/css/layouts/responsive-sidebars-rtl.css
+++ b/css/layouts/responsive-sidebars-rtl.css
@@ -60,6 +60,7 @@
     margin-left: -33.333%;
   }
   .two-sidebars .region-sidebar-second { /* Start a new row and span all 3 columns. */
+    clear: right;
     float: right;
     width: 100%;
     margin-right: 0%;
